--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Online Market for fair traded and fresh fruits"
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -17,7 +17,7 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
     />
-    <title>MOSHI MOSHI SHOP</title>
+    <title>Fruit Panda</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
